--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 .container{
-    height:100vh;
+    min-height:100vh;
     width:100%;
     background-position: center;
     background-image:url(images/background.png);
@@ -27,6 +27,7 @@
     cursor: pointer;
 }
 .cart{
+    height:90px;
     width:90px;
     cursor: pointer;
 }
